--- a/index.html
+++ b/index.html
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Image Uploader & Deleter</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Uploader & Deleter</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<div class="container">
-    <h1>Image Uploader & Deleter</h1>
+    <div class="container">
+        <h1>Image Uploader & Deleter</h1>
 
-    <!-- Upload form -->
-    <form id="uploadForm">
-        <input type="text" name="title" placeholder="Image Title" required>
-        <input type="text" name="tags" placeholder="Tags (comma separated)" required>
-        <input type="file" name="image" accept="image/*" required>
-        <button type="submit">Upload Image</button>
+        <!-- Upload form -->
+        <form id="uploadForm">
+            <input type="text" name="title" placeholder="Image Title" required>
+            <input type="text" name="tags" placeholder="Tags (comma separated)" required>
+            <input type="file" name="image" accept="image/*" required>
+            <button type="submit">Upload Image</button>
+        </form>
+
+<!-- MULTI IMAGE UPLOADER -->
+<div class="multi-upload-container">
+    <h2>Multi Image Uploader</h2>
+    <form id="multiUploadForm">
+        <input type="file" name="images" accept="image/*" multiple required>
+        <button type="submit">Upload Multiple Images</button>
     </form>
-
-    <hr>
-
-    <!-- Search + Delete Selected -->
-    <input type="text" id="searchInput" placeholder="Search by title or tags...">
-    <div style="margin: 10px 0;">
-        <button id="deleteSelectedBtn">Delete Selected</button>
-    </div>
-
-    <!-- Gallery -->
-    <div id="gallery"></div>
 </div>
 
-<script src="script.js"></script>
+        <!-- Search + Delete Selected -->
+        <input type="text" id="searchInput" placeholder="Search by title or tags...">
+        <div style="margin: 10px 0;">
+            <button id="deleteSelectedBtn">Delete Selected</button>
+        </div>
+
+<!-- Loader Overlay -->
+<div  id="loader-overlay" style="display:none;">
+    <div style="display: flex;align-items: center;justify-content: center; flex-direction: column;" class="flex">
+        <div class="loader"></div>
+        <div class="progress-bar">
+          <div id="progress"></div>
+        </div>
+    </div>
+  <p id="loader-text">Processing...</p>
+</div>
+
+        <!-- Gallery -->
+        <div id="gallery"></div>
+    </div>
+
+    
+
+    <script src="script.js"></script>
 </body>
+
 </html>
