--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <h2>Multi Image Uploader</h2>
     <form id="multiUploadForm">
         <input type="file" name="images" accept="image/*" multiple required>
+        <input type="text" name="title" placeholder="Enter a title for all." required>
+        <input type="text" name="tags" placeholder="Enter tags with comma ','" required>
         <button type="submit">Upload Multiple Images</button>
     </form>
 </div>
